# breaker

./: CMakeLists.txt  README.md  build.zig
src/: ball.c  ball.h  bar.c  bar.h  brick.c  brick.h  collisions.c  collisions.h  game.c  game.h  input.c  input.h  main.c  map.c  map.h  particle.c  particle.h  particle_list.c  particle_list.h  resource_manager.c  resource_manager.h  text.c  text.h  ui.c  ui.h  utils.c  utils.h  vec2.h  window.c  window.h
